--- a/src/site/asciidoc/release.adoc
+++ b/src/site/asciidoc/release.adoc
@@ -113,6 +113,9 @@ github_changelog_generator
 Make sure your IDE has the right `since` attribute. You should bump the version so that every new class that you create will have the correct version on it.
 For IntellijIDEA you can do that in  `File` -> `Settings` -> `Editor` -> `File and code templates` and click on the `Includes` tab .
 
+== Update version in start.nemesis.io
+You will need to update the versions in the `nemesis-start` project to reflect the newly released version.
+
 == Make new alias on the documentation website
 You need to make the alias `current` to point to the latest version that you just released. Also renamed the old `0.8-SNAPSHOT` version to be the just `0.8` as there will be no more deployments in that version.
 [source,bash]
