--- a/src/site/asciidoc/index.adoc
+++ b/src/site/asciidoc/index.adoc
@@ -8,8 +8,8 @@ Petar Tahchiev
 :icons: font
 :last-update-label!:
 
-The nemesis platform bom (Bill Of Materials) specifies all the dependencies for the platform. It inherits the link:http://docs.spring.io/platform/docs/2.0.1.RELEASE/reference/htmlsingle/[spring platform bom version 2.0.1.RELEASE] and includes
-also the  link:http://repo1.maven.org/maven2/org/drools/drools-bom/[drools maven bom]. On top of that it includes some more third party dependencies, which are not part of the other boms. The version of the deendencies is extracted as a property for easy management, and the dependencies themseves are specified as managed dependencies
+The nemesis platform bom (Bill Of Materials) specifies all the dependencies for the platform. It inherits the link:http://docs.spring.io/platform/docs/2.0.2.RELEASE/reference/htmlsingle/[spring platform bom version 2.0.2.RELEASE] and includes
+also the  link:http://repo1.maven.org/maven2/org/drools/drools-bom/[drools maven bom]. On top of that it includes some more third party dependencies, which are not part of the other boms. The version of the dependencies is extracted as a property for easy management, and the dependencies themselves are specified as managed dependencies
 so that the end-user can declare them without version.
 
 == List of dependencies
