Docs: Index page: quick start guide added

--- a/src/site/asciidoc/index.adoc
+++ b/src/site/asciidoc/index.adoc
@@ -2,8 +2,8 @@
 <div class="home">
    <div class="page-title">
     	<h1>Meet the Nemesis Platform</h1>
-    	<p>Here you'll find all the documentation and tutorials written by the Nemesis team. Start examining it by following the guides below. </br></br>
-    	 To get aware of the <b>Nemesis Platfotm architecture</b>, start from <a href="https://docs.nemesis.io/current-snapshot/platform/">HERE</a>. Out of the box, you receive more than <b>120 modules</b>. Check <a href="https://docs.nemesis.io/current-snapshot/platform/module/">HERE</a> which they are and how they can be integrated with your project. On the top of the Nemesis Platform, we have built several <a href="https://docs.nemesis.io/current-snapshot/samplestore/">Sample stores</a> to help you get started. The backend functionality and the CMS of each of the sample stores you can manage by the <a href="https://docs.nemesis.io/current-snapshot/console/">Backend console</a>. You can also generate a new Nemesis Sample store, by clicking the button below.</p>
+    	<p>Here you'll find all the documentation and tutorials written by the Nemesis team. If this is the first time you wirk with the Nemesis Platform, follow our <a href="https://docs.nemesis.io/current-snapshot/samplestore/quick-start.html">Quick start developer guide</a>. Or, alternatively, start examining by yourself. </br> </br>
+    	 To get aware of the <b>Nemesis Platfotm architecture</b>, start from <a href="https://docs.nemesis.io/current-snapshot/platform/">here</a>. Out of the box, you receive more than <b>120 modules</b>. Check <a href="https://docs.nemesis.io/current-snapshot/platform/module/">here</a> which they are and how they can be integrated with your project. On the top of the Nemesis Platform, we have built several <a href="https://docs.nemesis.io/current-snapshot/samplestore/">Sample stores</a> to help you get started. The backend functionality and the CMS of each of the sample stores you can manage by the <a href="https://docs.nemesis.io/current-snapshot/console/">Backend console</a>. You can generate a new Nemesis Sample store, by clicking the button below.</p>
     	<div class="startnemesisio">
     		<a class= "start-nemesis-io" href="http://start.nemesis.io/">Start a new project</a>
     	</div>
